# nexus_assistente

./: .ai-instructions.md  .cursorrules  .gitignore  DEPLOY.md  Manual_Geral_Nexus_2021_formatado.md  README.md  Thumbs.db  assessment_config.py  config.py  create_forms.py  create_forms_01.py  create_forms_02.py  create_forms_03.py  create_forms_04.py  crude.py  env.example  form_model_01.py  form_model_03.py  form_model_04.py  main.py  main_bad.py  melhorias_busca_nexus.md  nexus_assistant.py  pyproject.toml  render.yaml  requirements.txt  resultados_01.py  resultados_03.py  resultados_05.py  texto_manager.py  variavel_texto.txt  variavel_texto_en.txt  variavel_texto_es.txt
Conteudo/: 3_AltoRisco.md  Prompt NotebookLM.txt
Conteudo/01/: 1_C_Conformidade.md  1_D_Dominancia.md  1_I_Influencia.md  1_S_Estabilidade.md  21_DC_DOMINANCIA_CONFORMIDADE.md  22_DI_DOMINANCIA_INFLUENCIA.md  23_ID_INFLUENCIA_DOMINANCIA.md  24_IS_INFLUENCIA_ESTABILIDADE.md  25_SI_ESTABILIDADE_INFLUENCIA.md  26_SC_ESTABILIDADE_CONFORMIDADE.md  27_CD_CONFORMIDADE_DOMINANCIA.md  28_CS_CONFORMIDADE_ESTABILIDADE.md  29_DS_DOMINANCIA_ESTABILIDADE.md  30_SD_ESTABILIDADE_DOMINANCIA.md  31_IC_INFLUENCIA_CONFORMIDADE.md  32_CI_CONFORMIDADE_INFLUENCIA.md  41_DSC_DOMINANCIA_ESTABILIDADE_CONFORMIDADE.md  42_DIS_DOMINANCIA_INFLUENCIA_ESTABILIDADE.md  43_ISC_INFLUENCIA_ESTABILIDADE_CONFORMIDADE.md  44_DIC_DOMINANCIA_INFLUENCIA_CONFORMIDADE.md
Conteudo/02/: 1_C_Conformidade.md  1_D_Dominancia.md  1_I_Influencia.md  1_S_Estabilidade.md  (+7 more)
data/: calcrh.db  calcrh2 copy.db  calcrh2.db  calcrh2a.db
docs/: Streamlit_Manual_Gemini.md  boas_praticas_cursor.md  docs_agno_com_introduction_complete_manual.md  guia_base_conhecimento_ia.md  guia_implementacao_assessments.md  projeto - Cálculo de Vulnerabilidade.md  projeto - Regras para a Ferramenta.md  refatoracao_plataforma_assessments.md  script_criar_base_conhecimento.py
manutencao/: analise_integracao_moodle.txt  analise_sistema_cadastro_usuarios.md  implementacao_ranking_relatorio_detalhado_armadilhas.txt  insercao_botoes_menu_final_pagina.txt  regras_perfis_disc.txt
paginas/: crude copy 2.py  crude copy.py  crude.py  form_model copy.py  form_model.py  form_model_01.py  form_model_02.py  form_model_03.py  form_model_04.py  form_model_05.py  form_model_recalc_01.py  form_model_recalc_05.py  monitor.py  resultados copy 2.py  resultados copy.py  resultados.py  resultados_01.py  resultados_02.py  resultados_03.py  resultados_04.py  resultados_05.py  resultados_adm copy.py  resultados_adm.py
(+22 files in other folders)
