[project]
name = "curso-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.6",
    "groq>=0.30.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "tavily-python>=0.7.10",
    "streamlit>=1.32.0",
    "openai>=1.97.1",
    "chromadb>=0.4.15",
    "requests>=2.32.0",
]
