[project]
name = "20-plataforma-ch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "asteval==1.0.6",
    "attrs==24.3.0",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cssselect2==0.7.0",
    "cycler==0.12.1",
    "fonttools==4.55.3",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kaleido==0.2.1",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "narwhals==1.22.0",
    "numpy==2.2.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "plotly==6.0.0",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "pyarrow==19.0.0",
    "pycparser==2.22",
    "pydeck==0.9.1",
    "pydyf==0.11.0",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "pyphen==0.17.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "referencing==0.36.1",
    "reportlab==4.3.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.41.1",
    "tenacity==9.0.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
    "zopfli==0.2.3.post1",
]
